--- a/templates/migrate.html
+++ b/templates/migrate.html
@@ -8,7 +8,7 @@
 
     <form method="post" class="">
         <div class="data" style="background-color:blue;">
-            <h1 style="text-align:center; color:green;">Mysql to Mongodb Migration</h1>
+            <h1 style="text-align:center; color:white;">Mysql to Mongodb Migration</h1>
         </div>
         <center>
             Enter the Mysql_Database :<input type="text" name="mysql" />&nbsp;&nbsp;&nbsp;
